<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombre_registro"
        style="@style/appTheme.edt"
        android:layout_marginTop="20dp"
        android:hint="@string/app_txtNombre_regis"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2" />

    <EditText
        android:id="@+id/edtEmail_registro"
        style="@style/appTheme.edt"
        android:layout_marginTop="28dp"
        android:hint="@string/app_txtEmail_loign"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre_registro" />

    <EditText
        android:id="@+id/edtContraseña_registro"
        style="@style/appTheme.edt"
        android:layout_marginTop="28dp"
        android:hint="@string/app_txtPassword_login"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail_registro" />


    <EditText
        android:id="@+id/edtContraseña2_registro"
        style="@style/appTheme.edt"
        android:layout_marginTop="28dp"
        android:hint="@string/app_txt_password2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña_registro" />

    <Button
        android:onClick="registroToHome"
        android:id="@+id/btnRegistrar"
        style="@style/appTheme.btnLogin"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/app_btnRegistrar_regis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:onClick="goLogin"
        android:id="@+id/btnRegresar"
        style="@style/appTheme.btnLogin"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/app_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>